--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -14682,10 +14682,10 @@ BDF:
 
 # Highscreen
 Highscreen:
-  regex: 'HIGHSCREEN|(Easy-Power-Pro|Power Ice Max|Razar_Pro|Power Rage Evo|Zera[ _][UFS]|PowerFivePro|PowerFour|BOOST II(?:se)?|FestXL)[;)/ ]'
+  regex: 'HIGHSCREEN|(Easy-Power-Pro|Power Ice Max|Razar_Pro|Power Rage(?: Evo)?|Zera[ _][UFS]|PowerFivePro|PowerFour|BOOST II(?:se)?|FestXL)[;)/ ]'
   device: 'smartphone'
   models:
-    - regex: '(Power Ice Max|Power Rage Evo|Zera[ _][UFS])[;)/ ]'
+    - regex: '(Power Ice Max|Power Rage(?: Evo)?|Zera[ _][UFS])[;)/ ]'
       model: '$1'
     - regex: 'PowerFivePro[;)/ ]'
       model: 'Power Five Pro'
@@ -15579,3 +15579,9 @@ Tinai:
   regex: 'Tinai (K[12])[);/ ]'
   device: 'smartphone'
   model: '$1'
+
+# Winds (Windsmobile)
+Winds:
+  regex: 'NOTE GRACE V[);/ ]'
+  device: 'smartphone'
+  model: 'Note Grace V'
