--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2199,7 +2199,7 @@ Bluegood:
 
 # Blackview
 Blackview:
-  regex: 'Blackview|(BV([2456789]000|(5[589]|9[15689])00|6800)(?:[ _](?:PRO))?|(P10000(?:[ _](?:PRO))?)|omega[ _]pro|Alife[ _][PS]1|Heatwave|DM550|BV9700Pro|(?<!Lenovo[_ ])A[68]0(?:Pro)?\))'
+  regex: 'Blackview|(BV([24-9]000|(5[589]|9[15689])00|6[18]00)(?:[ _](?:PRO))?|(P10000(?:[ _](?:PRO))?)|omega[ _]pro|Alife[ _][PS]1|Heatwave|DM550|BV9700Pro|(?<!Lenovo[_ ])A[68]0(?:Pro)?\))'
   device: 'smartphone'
   models:
     - regex: 'A60Pro\)'
@@ -2218,7 +2218,10 @@ Blackview:
       model: 'BV9000 Pro F'
     - regex: '(BV([48]000|9[56]00|6800))Pro'
       model: '$1 Pro'
-    - regex: '(BV([2456789]000|(5[589]|9[15689])00)(?:[ _](?:PRO))?)'
+    - regex: '(BV6100)[);/ ]'
+      model: '$1'
+      device: 'phablet'
+    - regex: '(BV([24-9]000|(5[589]|9[15689])00)(?:[ _](?:PRO))?)'
       model: '$1'
     - regex: '(P10000(?:[ _](?:PRO))?)'
       model: '$1'
