--- a/Tests/fixtures/smartphone-16.yml
+++ b/Tests/fixtures/smartphone-16.yml
@@ -1459,3 +1459,23 @@
     model: Y9 Plus
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 5.1; Power Ice Build/LMY47D; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/78.0.3904.108 Mobile Safari/537.36 OPR/45.0.2254.144848
+  os:
+    name: Android
+    short_name: AND
+    version: "5.1"
+    platform: ""
+  client:
+    type: browser
+    name: Opera Mobile
+    short_name: OM
+    version: 45.0.2254.144848
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: H2
+    model: Power Ice
+  os_family: Android
+  browser_family: Opera
