--- a/Tests/fixtures/desktop-1.yml
+++ b/Tests/fixtures/desktop-1.yml
@@ -11,7 +11,7 @@
     name: Facebook
     version: "140.0.0.232.179"
   device:
-    type: notebook
+    type: desktop
     brand: LE
     model: Legion Y720
   os_family: Windows
@@ -28,7 +28,7 @@
     name: Facebook
     version: "140.0.0.232.179"
   device:
-    type: notebook
+    type: desktop
     brand: AC
     model: Aspire E5-511
   os_family: Windows
@@ -45,7 +45,7 @@
     name: Facebook
     version: "140.0.0.232.179"
   device:
-    type: notebook
+    type: desktop
     brand: DL
     model: XPS 15 9530
   os_family: Windows
@@ -62,7 +62,7 @@
     name: Facebook
     version: "140.0.0.232.179"
   device:
-    type: notebook
+    type: desktop
     brand: LE
     model: Ideapad 310-15ISK
   os_family: Windows
@@ -79,7 +79,7 @@
     name: Facebook
     version: "140.0.0.232.179"
   device:
-    type: notebook
+    type: desktop
     brand: TN
     model: Prestige TH-360R12.32CTW
   os_family: Windows
@@ -96,7 +96,7 @@
     name: Facebook
     version: "140.0.0.205.179"
   device:
-    type: notebook
+    type: desktop
     brand: HP
     model: Pavilion x2
   os_family: Windows
@@ -113,7 +113,7 @@
     name: Facebook
     version: "140.0.0.205.179"
   device:
-    type: notebook
+    type: desktop
     brand: HP
     model: 15 Laptop PC
   os_family: Windows
@@ -130,7 +130,7 @@
     name: Facebook
     version: "140.0.0.232.179"
   device:
-    type: notebook
+    type: desktop
     brand: HP
     model: ENVY x360 Convertible PC
   os_family: Windows
@@ -147,7 +147,7 @@
     name: Facebook
     version: "140.0.0.232.179"
   device:
-    type: notebook
+    type: desktop
     brand: HP
     model: EliteBook 2570p
   os_family: Windows
@@ -164,7 +164,7 @@
     name: Facebook
     version: "140.0.0.205.179"
   device:
-    type: notebook
+    type: desktop
     brand: HP
     model: Pavilion dv6
   os_family: Windows
@@ -181,7 +181,7 @@
     name: Facebook
     version: "140.0.0.232.179"
   device:
-    type: notebook
+    type: desktop
     brand: HP
     model: Pavilion
   os_family: Windows
@@ -198,7 +198,7 @@
     name: Facebook
     version: "140.0.0.232.179"
   device:
-    type: notebook
+    type: desktop
     brand: HP
     model: Spectre x360
   os_family: Windows
@@ -215,7 +215,7 @@
     name: Facebook
     version: "140.0.0.205.179"
   device:
-    type: notebook
+    type: desktop
     brand: AU
     model: Transformer Book
   os_family: Windows
@@ -232,7 +232,7 @@
     name: Facebook
     version: "140.0.0.232.179"
   device:
-    type: notebook
+    type: desktop
     brand: AU
     model: Transformer Mini
   os_family: Windows
@@ -249,7 +249,7 @@
     name: Facebook
     version: "140.0.0.232.179"
   device:
-    type: notebook
+    type: desktop
     brand: AU
     model: X555LN
   os_family: Windows
@@ -266,7 +266,7 @@
     name: Facebook
     version: "140.0.0.205.179"
   device:
-    type: notebook
+    type: desktop
     brand: AU
     model: K50IN
   os_family: Windows
@@ -283,7 +283,7 @@
     name: Facebook
     version: "140.0.0.232.179"
   device:
-    type: notebook
+    type: desktop
     brand: AC
     model: One 10
   os_family: Windows
@@ -300,7 +300,7 @@
     name: Facebook
     version: "140.0.0.232.179"
   device:
-    type: notebook
+    type: desktop
     brand: AU
     model: X556UQK
   os_family: Windows
@@ -317,7 +317,7 @@
     name: Facebook
     version: "140.0.0.232.179"
   device:
-    type: notebook
+    type: desktop
     brand: AU
     model: K54L
   os_family: Windows
@@ -334,7 +334,7 @@
     name: Facebook
     version: "140.0.0.232.179"
   device:
-    type: notebook
+    type: desktop
     brand: LE
     model: G50-80
   os_family: Windows
@@ -351,7 +351,7 @@
     name: Facebook
     version: "140.0.0.205.179"
   device:
-    type: notebook
+    type: desktop
     brand: AU
     model: X550LB
   os_family: Windows
@@ -368,7 +368,7 @@
     name: Facebook
     version: "75.0.0.50.22"
   device:
-    type: notebook
+    type: desktop
     brand: AU
     model: X553MA
   os_family: Windows
@@ -385,7 +385,7 @@
     name: Facebook
     version: "140.0.0.232.179"
   device:
-    type: notebook
+    type: desktop
     brand: C0
     model: Notebook 14" Cherry Trail
   os_family: Windows
@@ -402,7 +402,7 @@
     name: Facebook
     version: "140.0.0.232.179"
   device:
-    type: notebook
+    type: desktop
     brand: LE
     model: ThinkPad Helix 3702
   os_family: Windows
@@ -419,7 +419,7 @@
     name: Facebook
     version: "140.0.0.205.179"
   device:
-    type: notebook
+    type: desktop
     brand: DL
     model: Latitude E4300
   os_family: Windows
@@ -436,7 +436,7 @@
     name: Facebook
     version: "60.0.0.36.138"
   device:
-    type: notebook
+    type: desktop
     brand: HP
     model: ProBook 6560b
   os_family: Windows
@@ -470,7 +470,7 @@
     name: Facebook
     version: "140.0.0.205.179"
   device:
-    type: notebook
+    type: desktop
     brand: DL
     model: XPS 15 9550
   os_family: Windows
@@ -487,7 +487,7 @@
     name: Facebook
     version: "140.0.0.232.179"
   device:
-    type: notebook
+    type: desktop
     brand: AU
     model: ZenBook Flip
   os_family: Windows
@@ -504,7 +504,7 @@
     name: Facebook
     version: "65.0.0.44.139"
   device:
-    type: notebook
+    type: desktop
     brand: AC
     model: Aspire E5-421G
   os_family: Windows
@@ -521,7 +521,7 @@
     name: Facebook
     version: "140.0.0.232.179"
   device:
-    type: notebook
+    type: desktop
     brand: DL
     model: Inspiron 3541
   os_family: Windows
@@ -538,7 +538,7 @@
     name: Facebook
     version: "140.0.0.205.179"
   device:
-    type: notebook
+    type: desktop
     brand: HP
     model: Compaq Presario CQ61
   os_family: Windows
@@ -572,7 +572,7 @@
     name: Facebook
     version: "140.0.0.205.179"
   device:
-    type: notebook
+    type: desktop
     brand: TS
     model: Satellite L650
   os_family: Windows
@@ -589,7 +589,7 @@
     name: Facebook
     version: "140.0.0.205.179"
   device:
-    type: notebook
+    type: desktop
     brand: TS
     model: Satellite S855
   os_family: Windows
@@ -606,7 +606,7 @@
     name: Facebook
     version: "140.0.0.232.179"
   device:
-    type: notebook
+    type: desktop
     brand: TS
     model: Satellite C650
   os_family: Windows
@@ -623,7 +623,7 @@
     name: Facebook
     version: "140.0.0.232.179"
   device:
-    type: notebook
+    type: desktop
     brand: TS
     model: Satellite A200
   os_family: Windows
@@ -640,7 +640,7 @@
     name: Facebook
     version: "61.0.0.46.152"
   device:
-    type: notebook
+    type: desktop
     brand: TS
     model: Satellite C855
   os_family: Windows
@@ -657,7 +657,7 @@
     name: Facebook
     version: "67.0.0.13.140"
   device:
-    type: notebook
+    type: desktop
     brand: TS
     model: Satellite A500
   os_family: Windows
@@ -674,7 +674,7 @@
     name: Facebook
     version: "186.0.0.83.783"
   device:
-    type: notebook
+    type: desktop
     brand: HP
     model: ProBook 6360b
   os_family: Windows
@@ -691,7 +691,7 @@
     name: Facebook
     version: "171.0.0.36.0"
   device:
-    type: notebook
+    type: desktop
     brand: HP
     model: ProBook 440 G5
   os_family: Windows
@@ -708,7 +708,7 @@
     name: Facebook
     version: "186.0.0.83.783"
   device:
-    type: notebook
+    type: desktop
     brand: HP
     model: EliteBook 2560p
   os_family: Windows
