--- a/regexes/device/notebooks.yml
+++ b/regexes/device/notebooks.yml
@@ -7,7 +7,7 @@
 
 Acer:
   regex: 'FBMD/(?:Aspire E5-421G|Z5WAL|One S1003);'
-  device: 'notebook'
+  device: 'desktop'
   models:
     - regex: 'FBMD/Aspire E5-421G;'
       model: 'Aspire E5-421G'
@@ -18,7 +18,7 @@ Acer:
 
 Asus:
   regex: 'FBMD/(?:K50IN|K54L|T100HAN|T103HAF|UX360CAK|X550LB|X553MA|X555LN|X556UQK);'
-  device: 'notebook'
+  device: 'desktop'
   models:
     - regex: 'FBMD/K50IN;'
       model: 'K50IN'
@@ -41,7 +41,7 @@ Asus:
 
 Dell:
   regex: 'FBMD/(?:Latitude E4300|Inspiron 3541|XPS 15 95[35]0);'
-  device: 'notebook'
+  device: 'desktop'
   models:
     - regex: 'Latitude E4300'
       model: 'Latitude E4300'
@@ -54,7 +54,7 @@ Dell:
 
 HP:
   regex: 'FBMD/((?:Compaq|HP) |23-f364)'
-  device: 'notebook'
+  device: 'desktop'
   models:
     - regex: 'Compaq Presario CQ61 Notebook PC'
       model: 'Compaq Presario CQ61'
@@ -83,7 +83,7 @@ HP:
 
 Lenovo:
   regex: 'FBMD/(?:37021C5|80E5|80SM|80VR);'
-  device: 'notebook'
+  device: 'desktop'
   models:
     - regex: 'FBMD/37021C5;'
       model: 'ThinkPad Helix 3702'
@@ -96,17 +96,17 @@ Lenovo:
 
 Schneider:
   regex: 'FBMD/SCL141CTP;'
-  device: 'notebook'
+  device: 'desktop'
   model: 'Notebook 14" Cherry Trail'
 
 Thomson:
   regex: 'FBMD/TH360R12.32CTW;'
-  device: 'notebook'
+  device: 'desktop'
   model: 'Prestige TH-360R12.32CTW'
 
 Toshiba:
   regex: 'FBMD/Satellite '
-  device: 'notebook'
+  device: 'desktop'
   models:
     - regex: 'Satellite (A[25]00|C650|C855|L650|S855)'
       model: 'Satellite $1'
