--- a/Tests/fixtures/desktop.yml
+++ b/Tests/fixtures/desktop.yml
@@ -4770,23 +4770,6 @@
   os_family: Windows
   browser_family: Unknown
 - 
-  user_agent: 'Mozilla/5.0 (Windows NT 10.0.16299.98; osmeta 10.3.3308) AppleWebKit/602.1.1 (KHTML, like Gecko) Version/9.0 Safari/602.1.1 osmeta/10.3.3308 Build/3308 [FBAN/FBW;FBAV/140.0.0.232.179;FBBV/83145113;FBDV/WindowsDevice;FBMD/SCL141CTP;FBSN/Windows;FBSV/10.0.16299.192;FBSS/2;FBCR/;FBID/desktop;FBLC/fr_FR;FBOP/45;FBRV/0]'
-  os:
-    name: Windows
-    short_name: WIN
-    version: "10"
-    platform: ""
-  client:
-    type: mobile app
-    name: Facebook
-    version: "140.0.0.232.179"
-  device:
-    type: desktop
-    brand: C0
-    model: Notebook 14" Cherry Trail
-  os_family: Windows
-  browser_family: Unknown
-- 
   user_agent: Mozilla/4.0 (compatible; MSIE 7.0; Windows NT 6.1; WOW64; Trident/7.0; SLCC2; .NET CLR 2.0.50727; .NET CLR 3.5.30729; .NET CLR 3.0.30729; Media Center PC 6.0; CPDTDF; .NET4.0C; InfoPath.3; .NET4.0E; Microsoft Outlook 14.0.7113; ms-office; MSOffice 14)
   os:
     name: Windows
@@ -4843,6 +4826,23 @@
     model: ""
   os_family: Windows
   browser_family: Internet Explorer
+- 
+  user_agent: 'Mozilla/5.0 (Windows NT 10.0.16299.98; osmeta 10.3.3308) AppleWebKit/602.1.1 (KHTML, like Gecko) Version/9.0 Safari/602.1.1 osmeta/10.3.3308 Build/3308 [FBAN/FBW;FBAV/140.0.0.232.179;FBBV/83145113;FBDV/WindowsDevice;FBMD/SCL141CTP;FBSN/Windows;FBSV/10.0.16299.192;FBSS/2;FBCR/;FBID/desktop;FBLC/fr_FR;FBOP/45;FBRV/0]'
+  os:
+    name: Windows
+    short_name: WIN
+    version: "10"
+    platform: ""
+  client:
+    type: mobile app
+    name: Facebook
+    version: "140.0.0.232.179"
+  device:
+    type: desktop
+    brand: CZ
+    model: Notebook 14" Cherry Trail
+  os_family: Windows
+  browser_family: Unknown
 - 
   user_agent: Mozilla/4.0 (compatible; MSIE 7.0; Windows NT 6.1; Win64; x64; Trident/4.0; .NET CLR 2.0.50727; SLCC2; .NET CLR 3.5.30729; .NET CLR 3.0.30729; Media Center PC 6.0; MDDC; .NET4.0C; .NET4.0E)
   os:
