--- a/Tests/fixtures/smartphone-16.yml
+++ b/Tests/fixtures/smartphone-16.yml
@@ -1559,3 +1559,23 @@
     model: U55GT
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; N1_550_Cruiser) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/77.0.3865.116 Mobile Safari/537.36 OPR/55.1.2719.50626
+  os:
+    name: Android
+    short_name: AND
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Opera Mobile
+    short_name: OM
+    version: 55.1.2719.50626
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: BV
+    model: N1-550 Cruiser
+  os_family: Android
+  browser_family: Opera
