--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -735,7 +735,7 @@ AllCall:
 
 # Bravis
 Bravis:
-  regex: 'Bravis[ _]|A501 Bright|A552 JOY Max|A504 Trace|A505 JOY Plus|A503 Joy|NB(?:106M|10[1-8]|751|7[145]|8[57]1|76)|NP101|NB961|NP 104 3G|B501|N1-570 Space|Atlas A551|A512 Harmony Pro|A510_Jeans_4G|A509_Jeans'
+  regex: 'Bravis[ _]|A501 Bright|A552 JOY Max|A504 Trace|A505 JOY Plus|A503 Joy|NB(?:106M|10[1-8]|751|7[145]|8[57]1|76)|NP101|NB961|NP 104 3G|B501|N1-570 Space|Atlas A551|A512 Harmony Pro|A510_Jeans_4G|A509_Jeans|N1_550_Cruiser'
   device: 'smartphone'
   models:
     - regex: 'A501 BRIGHT'
@@ -776,6 +776,8 @@ Bravis:
       model: 'A510 Jeans 4G'
     - regex: 'A509_Jeans'
       model: 'A509 Jeans'
+    - regex: 'N1_550_Cruiser'
+      model: 'N1-550 Cruiser'
     - regex: 'BRAVIS[ _]SLIM[ _]3G'
       model: 'Slim 3G'
       device: 'tablet'
